--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.vertx.starter</groupId>
-  <artifactId>vertx-start-project</artifactId>
+  <groupId>com.shenmao.vertx.starter</groupId>
+  <artifactId>vertx-starter</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
-    <vertx.version>3.4.2</vertx.version>
-    <main.verticle>io.vertx.starter.MainVerticle</main.verticle>
+    <vertx.version>3.5.0</vertx.version>
+    <vertx.verticle>com.shenmao.vertx.starter.MainVerticle</vertx.verticle>
     <fabric8-vertx-maven-plugin.version>1.0.13</fabric8-vertx-maven-plugin.version>
   </properties>
 
@@ -28,6 +28,13 @@
   </dependencyManagement>
 
   <dependencies>
+
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.3</version>
+    </dependency>
+
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-core</artifactId>
@@ -43,6 +50,31 @@
       <artifactId>vertx-unit</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-web-templ-freemarker</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.github.rjeschke</groupId>
+      <artifactId>txtmark</artifactId>
+      <version>0.13</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-jdbc-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>2.3.4</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -75,7 +107,7 @@
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
                     <Main-Class>io.vertx.core.Launcher</Main-Class>
-                    <Main-Verticle>${main.verticle}</Main-Verticle>
+                    <Main-Verticle>${vertx.verticle}</Main-Verticle>
                   </manifestEntries>
                 </transformer>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
@@ -98,7 +130,7 @@
           <mainClass>io.vertx.core.Launcher</mainClass>
           <arguments>
             <argument>run</argument>
-            <argument>${main.verticle}</argument>
+            <argument>${vertx.verticle}</argument>
           </arguments>
         </configuration>
       </plugin>
@@ -120,7 +152,7 @@
           <redeploy>true</redeploy>
         </configuration>
       </plugin>
-      
+
     </plugins>
   </build>
 
