--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
   <version>1.0-SNAPSHOT</version>
 
   <properties>
+
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
     <vertx.version>3.5.0</vertx.version>
     <vertx.verticle>com.shenmao.vertx.starter.MainVerticle</vertx.verticle>
     <fabric8-vertx-maven-plugin.version>1.0.13</fabric8-vertx-maven-plugin.version>
@@ -86,6 +89,7 @@
           <configuration>
             <source>1.8</source>
             <target>1.8</target>
+            <encoding>${project.build.sourceEncoding}</encoding>
           </configuration>
         </plugin>
       </plugins>
@@ -95,7 +99,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>2.4.3</version>
+        <version>3.0.0</version>
         <executions>
           <execution>
             <phase>package</phase>
