--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-web-client</artifactId>
+    </dependency>
+
 
 
     <!-- hsqldb -->
