--- a/src/main/resources/properties/db-queries.properties
+++ b/src/main/resources/properties/db-queries.properties
@@ -6,3 +6,5 @@ create-page=insert into Pages values (NULL, ?, ?)
 save-page=update Pages set Name =?, Content =? where Id =?
 all-pages=select Id, Name, Content from Pages
 delete-page=delete from Pages where Id =?
+
+all-pages-data=select * from Pages
