--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
       <version>4.8</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.fasterxml</groupId>
+      <artifactId>jackson-xml-databind</artifactId>
+      <version>0.6.2</version>
+    </dependency>
+
   </dependencies>
 
   <build>
