implement vert.x shiro

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
       <artifactId>vertx-web-client</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-auth-shiro</artifactId>
+    </dependency>
+
 
 
     <!-- hsqldb -->
